objects/DMAPP__Plan_Type_Solution__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__AM_Solution__c</fullName>
        <label>AM Solution</label>
        <referenceTo>DMAPP__AM_Solution__c</referenceTo>
        <relationshipLabel>Plan Type Solutions</relationshipLabel>
        <relationshipName>Plan_Type_Solutions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>Used to distinguish certain Plan Types as standard Dealmaker, and for identifying specific ones</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Type__c</fullName>
        <label>Plan Type</label>
        <referenceTo>DMAPP__Plan_Type__c</referenceTo>
        <relationshipLabel>Plan Type Solutions</relationshipLabel>
        <relationshipName>Plan_Type_Solutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Plan Type Solution</label>
    <nameField>
        <displayFormat>PTS-{0000}</displayFormat>
        <label>Plan Type Solution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Type Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>